# arxiv-sorter

./: .gitignore  README.md  pyproject.toml
src/arxiv_sorter/: __init__.py  cli.py  config.py  core.py
