[project]
name = "arxiv-sorter"
version = "0.1.0"
description = "Rank arXiv papers by relevance using parallel LLM merge-sort"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autobatcher>=0.1.1",
    "click>=8.1.0",
    "duckdb>=1.4.3",
    "loguru>=0.7.3",
    "parfold>=0.1.0",
    "tqdm>=4.66.0",
]

[project.scripts]
arxiv-sorter = "arxiv_sorter.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_sorter"]

